# computational-captcha

./: README  README.md
backend/: pyproject.toml  run.py
backend/computational_captcha/: bearer_auth.py  env.py  errors.py  main.py  types.py
backend/computational_captcha/controllers/: __init__.py  captcha.py
backend/computational_captcha/models/: captcha.py
